--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,4 +9,6 @@ Description: More about what it does (maybe more than one line)
 License: GPL (>= 3)
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.3.2
+RoxygenNote: 7.3.3
+Depends: 
+    R (>= 3.5)
